Separate test for cmake explorer

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -17,3 +17,16 @@ add_test(
     NAME ${This}
     COMMAND ${This}
 )
+
+SET(A2k9 Advent2009)
+
+add_executable(${A2k9} Year2019Tests.cpp)
+target_link_libraries(${A2k9} PUBLIC
+    gtest_main
+    Example
+)
+
+add_test(
+    NAME ${A2k9}
+    COMMAND ${A2k9}
+)
