--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 3.15)
 
-SET(This Example)
+SET(This AdventOfCode)
 
 # language
 PROJECT(${This} C CXX)
@@ -17,13 +17,11 @@ add_subdirectory(range-v3)
 include_directories("range-v3/include")
 
 set(Headers
-    Example.hpp
     framework/Day.hpp
     framework/Input.hpp
 )
 
 set(Sources
-    Example.cpp
     days/2019/Day01.cpp
     framework/Input.cpp
 )
