Separate Cmake proj into two targets

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -9,6 +9,7 @@ SET(Sources
 add_executable(${This} ${Sources})
 target_link_libraries(${This} PUBLIC
     gtest_main
+    Framework
     AdventOfCode
 )
 
