--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,9 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 3.15)
 
-SET(This AdventOfCode)
+SET(aoc AdventOfCode)
 
 # language
-PROJECT(${This} C CXX)
+PROJECT(${aoc} C CXX)
 
 SET(CMAKE_C_STANDARD 11)
 SET(CMAKE_CXX_STANDARD 17)
@@ -17,15 +17,25 @@ add_subdirectory(range-v3)
 include_directories("range-v3/include")
 
 set(Headers
-    framework/Day.hpp
-    framework/Input.hpp
+    days/2015/Day01.hpp
 )
 
 set(Sources
     days/2015/Day01.cpp
+)
+
+set(FrameworkHeaders
+    framework/Day.hpp
+    framework/Input.hpp
+)
+
+set(FrameworkSources
     framework/Input.cpp
 )
 
-add_library(${This} STATIC ${Sources} ${Headers})
+
+add_library(Framework STATIC ${FrameworkSources} ${FrameworkHeaders})
+add_library(${aoc} STATIC ${Sources} ${Headers})
+add_dependencies(${aoc} Framework)
 
 add_subdirectory(test)
