Separate tests as well

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,9 +1,31 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 3.15)
 
+##############################################
+
+SET(FrameworkTest FrameworkTest)
+
+SET(FrameworkSources
+    Framework.cpp
+)
+
+add_executable(${FrameworkTest} ${FrameworkSources})
+target_link_libraries(${FrameworkTest} PUBLIC
+    gtest_main
+    Framework
+    AdventOfCode
+)
+
+add_test(
+    NAME ${FrameworkTest}
+    COMMAND ${FrameworkTest}
+)
+
+##############################################
+
 SET(This AdventOfCodeTest)
 
 SET(Sources
-    Year2015Tests.cpp
+    Year2015.cpp
 )
 
 add_executable(${This} ${Sources})
@@ -17,3 +39,5 @@ add_test(
     NAME ${This}
     COMMAND ${This}
 )
+
+##############################################
