--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -22,42 +22,21 @@ add_test(
 
 ##############################################
 
-SET(aoc2015 AdventOfCode2015)
+SET(aoc AdventOfCodeTests)
 
-SET(Sources2015
+SET(Sources
     Year2015.cpp
-)
-
-add_executable(${aoc2015} ${Sources2015})
-target_link_libraries(${aoc2015} PUBLIC
-    gtest_main
-    Framework
-    AdventOfCode
-)
-
-add_test(
-    NAME ${aoc2015}
-    COMMAND ${aoc2015}
-)
-
-
-##############################################
-
-SET(aoc2018 AdventOfCode2018)
-
-SET(Sources2018
     Year2018.cpp
 )
 
-add_executable(${aoc2018} ${Sources2018})
-target_link_libraries(${aoc2018} PUBLIC
+add_executable(${aoc} ${Sources})
+target_link_libraries(${aoc} PUBLIC
     gtest_main
     Framework
     AdventOfCode
 )
 
 add_test(
-    NAME ${aoc2018}
-    COMMAND ${aoc2018}
+    NAME ${aoc}
+    COMMAND ${aoc}
 )
-
